<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rick_and_morty">Rick and Morty</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="search_a_character">Search a character</string>
    <string name="filter_by">Filter By</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="origin">Origin</string>
    <string name="no_characters_found">No character found</string>
    <string name="no_matches_found_please_check_your_search_query_or_applied_filters">No matches found. Please check your search query or applied filters.</string>
    <string name="residents">Residents</string>
    <string name="nothing_to_show">Nothing to show</string>
</resources>
