<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background">

    <FrameLayout
        android:id="@+id/flcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="26dp"
        app:layout_constraintBottom_toTopOf="@id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/filter_by"
            android:textColor="@color/color_on_primary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/baseline_close_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/gender"
        android:textColor="@color/color_on_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flcontainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender"
        tools:itemCount="5"
        tools:listitem="@layout/gender_item_layout" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvGender"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/status"
        android:textColor="@color/color_on_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGender" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status"
        tools:itemCount="4"
        tools:listitem="@layout/status_item_layout" />


    <TextView
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/reset_button_background"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/reset"
        android:textSize="18sp"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvStatus" />

    <TextView
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/apply_button_background"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/apply"
        android:textSize="18sp"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnReset"
        app:layout_constraintTop_toBottomOf="@id/rvStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>
